Display some basic detailed information about the location.